--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,15 +1,16 @@
 {
-  "semi": true,
-  "singleQuote": false,
-  "tabWidth": 4,
-  "trailingComma": "all",
-  "importOrder": [
-    "^(react|next?/?([a-zA-Z/]*))$",
-    "<THIRD_PARTY_MODULES>",
-    "^@/(.*)$",
-    "^[./]"
-  ],
-  "plugins": [
-    "@trivago/prettier-plugin-sort-imports"
-  ]
+    "semi": true,
+    "singleQuote": false,
+    "tabWidth": 4,
+    "trailingComma": "all",
+    "importOrder": [
+        "^(react|next?/?([a-zA-Z/]*))$",
+        "<THIRD_PARTY_MODULES>",
+        "^@/(.*)$",
+        "^[./]"
+    ],
+    "plugins": [
+        "@trivago/prettier-plugin-sort-imports",
+        "prettier-plugin-tailwindcss"
+    ]
 }
