--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@hookform/resolvers": "^3.9.0",
         "@prisma/client": "5.20.0",
         "@t3-oss/env-nextjs": "0.10.1",
+        "minio": "^8.0.1",
         "next": "14.2.4",
         "next-auth": "4.24.7",
         "react": "18.3.1",
