--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "build": "next build",
-        "dev": "next dev",
+        "dev": "next dev --turbo",
         "format": "prettier src/ --write",
         "lint": "next lint",
         "start": "next start",
@@ -16,40 +16,40 @@
         "db:migrate": "prisma migrate deploy"
     },
     "dependencies": {
-        "@auth/prisma-adapter": "1.6.0",
-        "@hookform/resolvers": "^3.9.0",
-        "@prisma/client": "5.20.0",
-        "@t3-oss/env-nextjs": "0.10.1",
+        "@auth/prisma-adapter": "2.7.2",
+        "@hookform/resolvers": "3.9.0",
+        "@prisma/client": "5.21.1",
+        "@t3-oss/env-nextjs": "0.11.1",
         "minio": "^8.0.1",
-        "next": "14.2.4",
-        "next-auth": "4.24.7",
+        "next": "15.0.1",
+        "next-auth": "4.24.10",
         "react": "18.3.1",
-        "react-aria-components": "^1.4.0",
+        "react-aria-components": "1.4.1",
         "react-dom": "18.3.1",
-        "react-hook-form": "7.53.0",
-        "zod": "3.23.3"
+        "react-hook-form": "7.53.1",
+        "zod": "3.23.8"
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "4.3.0",
         "@types/eslint": "8.56.10",
-        "@types/node": "20.14.10",
-        "@types/react": "18.3.3",
-        "@types/react-dom": "18.3.0",
-        "@typescript-eslint/eslint-plugin": "8.8.0",
-        "@typescript-eslint/parser": "8.8.0",
-        "autoprefixer": "^10.4.20",
+        "@types/node": "22.8.0",
+        "@types/react": "18.3.12",
+        "@types/react-dom": "18.3.1",
+        "@typescript-eslint/eslint-plugin": "8.11.0",
+        "@typescript-eslint/parser": "8.11.0",
+        "autoprefixer": "10.4.20",
         "eslint": "8.57.0",
-        "eslint-config-next": "14.2.14",
+        "eslint-config-next": "15.0.1",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-check-file": "2.8.0",
-        "eslint-plugin-n": "17.10.3",
-        "eslint-plugin-react": "7.37.1",
-        "postcss": "^8.4.47",
+        "eslint-plugin-n": "17.11.1",
+        "eslint-plugin-react": "7.37.2",
+        "postcss": "8.4.47",
         "prettier": "3.3.3",
-        "prettier-plugin-tailwindcss": "^0.6.8",
-        "prisma": "5.20.0",
-        "tailwindcss": "^3.4.13",
-        "typescript": "5.6.2"
+        "prettier-plugin-tailwindcss": "0.6.8",
+        "prisma": "5.21.1",
+        "tailwindcss": "3.4.14",
+        "typescript": "5.6.3"
     },
     "ct3aMetadata": {
         "initVersion": "7.37.0"
