--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@hookform/resolvers": "3.9.0",
         "@prisma/client": "5.21.1",
         "@t3-oss/env-nextjs": "0.11.1",
+        "formidable": "^3.5.2",
         "minio": "^8.0.1",
         "next": "15.0.1",
         "next-auth": "4.24.10",
