--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "format": "prettier src/ --write",
         "lint": "next lint",
         "start": "next start",
-        "postinstall": "prisma generate",
+        "postinstall": "prisma generate && prisma migrate deploy",
         "db:push": "prisma db push",
         "db:studio": "prisma studio",
         "db:generate": "prisma migrate dev",
