--- a/package.json
+++ b/package.json
@@ -19,41 +19,43 @@
         "db:migrate": "prisma migrate deploy"
     },
     "dependencies": {
-        "@auth/prisma-adapter": "2.7.2",
-        "@hookform/resolvers": "3.9.0",
-        "@prisma/client": "5.21.1",
+        "@auth/prisma-adapter": "2.7.4",
+        "@hookform/resolvers": "3.10.0",
+        "@prisma/client": "6.2.1",
         "@t3-oss/env-nextjs": "0.11.1",
-        "formidable": "^3.5.2",
-        "minio": "^8.0.1",
-        "next": "15.0.1",
-        "next-auth": "4.24.10",
-        "react": "18.3.1",
-        "react-aria-components": "1.4.1",
-        "react-dom": "18.3.1",
-        "react-hook-form": "7.53.1",
-        "zod": "3.23.8"
+        "better-auth": "^1.1.14",
+        "clsx": "^2.1.1",
+        "minio": "8.0.3",
+        "next": "15.1.4",
+        "next-auth": "4.24.11",
+        "react": "19.0.0",
+        "react-aria-components": "1.6.0",
+        "react-dom": "19.0.0",
+        "react-hook-form": "7.54.2",
+        "tailwind-merge": "^2.6.0",
+        "zod": "3.24.1"
     },
     "devDependencies": {
-        "@trivago/prettier-plugin-sort-imports": "4.3.0",
-        "@types/eslint": "8.56.10",
+        "@trivago/prettier-plugin-sort-imports": "5.2.1",
+        "@types/eslint": "9.6.1",
         "@types/node": "22.8.0",
-        "@types/react": "18.3.12",
-        "@types/react-dom": "18.3.1",
-        "@typescript-eslint/eslint-plugin": "8.11.0",
-        "@typescript-eslint/parser": "8.11.0",
+        "@types/react": "19.0.7",
+        "@types/react-dom": "19.0.3",
+        "@typescript-eslint/eslint-plugin": "8.20.0",
+        "@typescript-eslint/parser": "8.20.0",
         "autoprefixer": "10.4.20",
-        "eslint": "8.57.0",
-        "eslint-config-next": "15.0.1",
-        "eslint-config-prettier": "9.1.0",
+        "eslint": "9.18.0",
+        "eslint-config-next": "15.1.4",
+        "eslint-config-prettier": "10.0.1",
         "eslint-plugin-check-file": "2.8.0",
-        "eslint-plugin-n": "17.11.1",
-        "eslint-plugin-react": "7.37.2",
-        "postcss": "8.4.47",
-        "prettier": "3.3.3",
-        "prettier-plugin-tailwindcss": "0.6.8",
-        "prisma": "5.21.1",
-        "tailwindcss": "3.4.14",
-        "typescript": "5.6.3"
+        "eslint-plugin-n": "17.15.1",
+        "eslint-plugin-react": "7.37.4",
+        "postcss": "8.5.1",
+        "prettier": "3.4.2",
+        "prettier-plugin-tailwindcss": "0.6.10",
+        "prisma": "6.2.1",
+        "tailwindcss": "3.4.17",
+        "typescript": "5.7.3"
     },
     "ct3aMetadata": {
         "initVersion": "7.37.0"
